Adds Lombok, removes Record (as preview) and clean-up/doc